Added images to the file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>POP!</title>
+<title>Greetings to you!</title>
+<link rel="stylesheet" href="popstyle.css">
 </head>
 <body>
 
 <h1>Annyeong</h1>
+<div><img src="anya-forger.jpg" alt="waku waku!"
+style="width:50%;max-width:960px"></div>
+<p>It is said Spy x Family is coming back on october.Yay!</p>
 <p>This is Cendric Mendoza! &lt;3</p>
 
 </body>
