Added waku waku in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>POP!</title>
+<title>Greetings!</title>
+<link rel="stylesheet" href="popstyle.css">
 </head>
 <body>
 
 <h1>Annyeong</h1>
-<p>This is Cendric Mendoza! &lt;3</p>
+<p>This is Ma'am Fatima! &lt;3</p>
+<p>Waku waku!</p>
 
 </body>
 </html>
